Filesystem labels are not suitable for UI
Old description:
something out of date, a FAT32 formated USB stick is shown as msdos? msdos would conventionally be FAT12, or FAT16 which are no longer in use from the MS-DOS era up to 6.22
Can it be changed to a regular "fat" or "FAT" name?
MS-DOS didn't support any 32GB USB storage....
eg:
/dev/sdb1 on /media/jonny/ESD-USB type vfat (rw,nosuid,nodev,relatime,uid=1000,gid=1000,fmask=0022,dmask=0022,codepage=437,iocharset=iso8859-1,shortname=mixed,showexec,utf8,flush,errors=remount-ro,uhelper=udisks2)
Device Boot Start End Sectors Size Id Type /dev/sdb1 * 2048 61767679 61765632 29.5G c W95 FAT32 (LBA)
Edited by Khalid Abu Shawarib